Treat \N as a valid new line sequence in vcard input

The vCard RFC has a note on fields of type text that suggests that
both \n and \N are to be treated as new line sequences:

        . The method for specifying CRLF character sequences in text
          type values has been changed. The CRLF character sequence in
          a text type value is specified with the backslash character
          sequence "\n" or "\N".

BUG: 297541
FIXED-IN: 4.8.3
REVIEW: 104509